--- a/src/main/webapp/viewBook.xhtml
+++ b/src/main/webapp/viewBook.xhtml
@@ -1,15 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         " http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd ">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h=" http://xmlns.jcp.org/jsf/html "
-      xmlns:ui=" http://xmlns.jcp.org/jsf/facelets "
-      xmlns:f=" http://xmlns.jcp.org/jsf/core ">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
  
 <ui:composition template="layout.xhtml" >
  
   <f:metadata>
     <f:viewParam name="id" value="#{bookController.book.id}"/>
-    <f:viewAction action="#{bookController.doFindBookById}"/>
+    <f:viewAction action="#{bookController.findBookById}"/>
   </f:metadata>
  
   <ui:define name="title">View a book</ui:define>
